Fix overflow on property name on property page

--- a/src/Pages/PropertyListingPage/PropertyListings.scss
+++ b/src/Pages/PropertyListingPage/PropertyListings.scss
@@ -154,11 +154,14 @@
 			width: 50%;
 			padding: 0px 25px;
 			box-sizing: border-box;
+			overflow: hidden;
 
 			h1 {
 				margin: 24px 0px;
 				font-size: 52px;
 				font-weight: 500;
+				overflow: hidden;
+				text-overflow: ellipsis;
 			}
 			p {
 				margin: 0;
